fixed security issues

--- a/package.json
+++ b/package.json
@@ -12,37 +12,37 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^5.1.1",
-    "@supabase/supabase-js": "^2.33.1",
-    "@types/node": "20.4.7",
-    "@types/react": "^18.2.18",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "axios": "^1.5.0",
+    "@prisma/client": "^5.21.1",
+    "@supabase/supabase-js": "^2.45.6",
+    "@types/node": "22.7.9",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "18.3.1",
+    "autoprefixer": "10.4.20",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
-    "cookie": "^0.5.0",
-    "debug": "^4.3.4",
-    "dompurify": "^3.0.5",
-    "embla-carousel": "^8.0.0-rc11",
-    "embla-carousel-react": "^8.0.0-rc11",
-    "jsonwebtoken": "^9.0.1",
-    "next": "13.4.12",
-    "postcss": "8.4.27",
-    "prisma": "^5.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.10.1",
-    "supports-color": "^8.1.1",
-    "tailwindcss": "3.3.3",
-    "ts-node": "^10.9.1",
-    "typescript": "5.1.6"
+    "cookie": "^1.0.1",
+    "debug": "^4.3.7",
+    "dompurify": "^3.1.7",
+    "embla-carousel": "^8.3.0",
+    "embla-carousel-react": "^8.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "next": "15.0.1",
+    "postcss": "8.4.47",
+    "prisma": "^5.21.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-icons": "^5.3.0",
+    "supports-color": "^9.4.0",
+    "tailwindcss": "3.4.14",
+    "ts-node": "^10.9.2",
+    "typescript": "5.6.3"
   },
   "devDependencies": {
-    "@mermaid-js/mermaid-cli": "^10.4.0",
-    "@types/bcrypt": "^5.0.0",
-    "@types/cookie": "^0.5.1",
-    "@types/dompurify": "^3.0.2",
-    "@types/jsonwebtoken": "^9.0.2",
-    "prisma-erd-generator": "^1.11.1"
+    "@mermaid-js/mermaid-cli": "^11.2.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie": "^0.6.0",
+    "@types/dompurify": "^3.0.5",
+    "@types/jsonwebtoken": "^9.0.7",
+    "prisma-erd-generator": "^1.11.2"
   }
 }
